--- a/TitaniteReferences.bib
+++ b/TitaniteReferences.bib
@@ -476,3 +476,20 @@ year = {2001}
   year={2006},
   publisher={Taylor \& Francis}
 }
+@book{Wickham2017,
+author = {Wickham, Hadley and Grolemund, Garrett},
+pages = {492},
+publisher = {O'Reilly},
+title = {{R for Data Science}},
+url = {https://r4ds.had.co.nz/},
+year = {2017}
+}
+@book{Kabacoff2015,
+author = {Kabacoff, Robert I},
+edition = {2nd},
+isbn = {1935182390},
+pages = {579},
+publisher = {Manning},
+title = {{R in Action}},
+year = {2015}
+}
