--- a/AllExptsMV3.Rmd
+++ b/AllExptsMV3.Rmd
@@ -7,13 +7,13 @@ output:
     toc: yes
 bibliography: "TitaniteReferences.bib"
 ---
-
-```{r set-global, include=FALSE, echo=FALSE}
+```{r set-global, include=FALSE}
 # Suppress all error messages
 knitr::opts_chunk$set(error = FALSE)
 ```
 
-```{r setup, include=FALSE}
+
+```{r setup, echo=FALSE, include=FALSE}
 if (!require("pacman"))
    install.packages("pacman")
 pacman::p_load(tidyverse, car, leaps, knitr, skimr, ggExtra, gvlma)
@@ -30,7 +30,7 @@ skimr::skim(AllExpts)
 
 ### Calculate concentrations of cations
 
-```{r, echo=FALSE}
+```{r}
 Cations <- AllExpts %>%
   mutate(
     Si = SiO2/60.0848,
@@ -42,18 +42,13 @@ Cations <- AllExpts %>%
     Mg = MgO/40.3044,
     Ti = TiO2/79.8988,
     eCa = (CaO/56.0794 - Al2O3/101.961 + K2O/94.194 + Na2O/61.979),
-    CationSum = (Si + Al + Na + K + Ca + Fe + Mg + Ti),
-    lnTiO2 = log(TiO2),
-    Al2O3m = Al2O3/101.961,
-    Na2Om = Na2O/61.979,
-    K2Om = K2O/94.194,
-    CaOm = CaO/56.0794
+    CationSum = (Si + Al + Na + K + Ca + Fe + Mg + Ti)
      )
 ```
 
 ### Calculate cation fractions
 
-```{r, echo=FALSE}
+```{r}
 
 CationFractions <- Cations
 f <- match("Si", names(CationFractions))
@@ -70,77 +65,73 @@ Formula for calculating melt composition parameter M [@Ryerson1987]
 
 $$M = \frac{(Na + K + 2*Ca)}{(Si * Al)}$$
 
-```{r, echo=FALSE}
+```{r}
 CationFractions <- CationFractions %>%
   mutate(
     M = (Na + K + 2*Ca)/(Si*Al),
     FM = (Na + K + 2*(Ca + Fe + Mg))/(Si*Al),
     C = (10*eCa)/(Si*Al),
-    A_CNK = Al2O3m/(CaOm + Na2Om + K2Om),
-    A_NK = Al2O3m/(Na2Om + K2Om),
-    A_C = Al2O3m/CaOm,
     TK = TC+273.15,
     InvTK = 1/TK,
     PInvTK = (Pkb*1000 - 1)*InvTK
     )
-# Filter out experiments with no titanite in run products glasses
+# Filter out experiments with no titanite in run products
 CationFractionsNoTitanite <- filter(CationFractions, Titanite == "N")
 CationFractionsTitanite <- filter(CationFractions, Titanite == "Y")
 ```
 
 ### Correlation matrix
 
-```{r, echo=FALSE}
-CorrTest <- select(CationFractionsTitanite, TiO2, lnTiO2, Pkb, Ca, M:PInvTK, A_NK, A_CNK, A_C)
+```{r}
+CorrTest <- select(CationFractionsTitanite, TiO2, Pkb, Ca, M:PInvTK)
 cor(CorrTest)
 ```
 
--   FM parameter does not correlate as well as M or C, so drop FM.
--   Pkb and PInvTK show poor correlations, so drop from model.
+- FM parameter does not correlated as well as M or C, so drop FM.
+- Pkb and PInvTK show poor correlations, so drop from model.
 
 ### Subsets regression
+- to find optimal set of parameters 
 
--   to find optimal set of parameters
-
-```{r, echo=FALSE}
-leaps <- regsubsets(TiO2 ~ TK + M + C + InvTK, data = CationFractionsTitanite, nbest = 2) 
+```{r}
+leaps <- regsubsets(TiO2 ~ TK + M + FM + C + InvTK, data = CationFractionsTitanite, nbest = 2) 
 plot(leaps, scale = "adjr2")
 
 ```
 
--   M is in best model fit and C is not, so run M models first and then C, then see which model is better validated.
+- C is in best model fit and M is not, but run M models first and then C, then see which model is better validated.
 
 ### Scatterplot matrices
 
-```{r, echo=FALSE, results='hide'}
-scatterplotMatrix(~ Ti + A_CNK + InvTK + TK + C + M, data = CationFractionsTitanite, groups = CationFractionsTitanite$Source, smooth = FALSE)
+```{r}
+scatterplotMatrix(~ Ti + Ca + InvTK + TK + C + M, data = CationFractionsTitanite, groups = CationFractionsTitanite$Source, smooth = FALSE)
 dev.copy(png,"ScatterPlotMatrixAllExpts.png")
 dev.off()   
 
 ```
 
--   LEPR compositions show bimodal distribution for melt composition parameters M and C.
-
+- LEPR compositions show bimodal distribution for melt composition parameters M and C. 
+  
 ### Preliminary M model fit
 
-```{r, echo=FALSE}
+```{r}
 RegModel <- CationFractionsTitanite
 fit <- lm(TiO2 ~ M + InvTK + TK, data = RegModel)
 summary(fit)
 
 ```
 
--   TK fits better than InvTK, so drop InvTK
+- TK fits better than InvTK, so drop InvTK
 
 ### Refined M model fit
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 fit <- lm(TiO2 ~ M + TK, data = RegModel)
 summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("SpDis_1", "SpDis_3", "SpG_28")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ M + TK, data = RegModel)
@@ -148,7 +139,7 @@ summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("ASI200", "SpDis_2", "DAC")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ M + TK, data = RegModel)
@@ -156,34 +147,40 @@ summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("HL220-60000", "SH2Na", "SH2K")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ M + TK, data = RegModel)
 out <- summary(fit)
-out
 plot(fit)
 ```
 
-```{r, echo=FALSE}
-Mcoef <- out$coefficients[2,1]
-Tcoef <- out$coefficients[3,1]
-Int <- out$coefficients[1,1]
+```{r}
 RegModel <- RegModel %>%
   mutate(
-   TiO2sat = (Mcoef * M + Tcoef * TK + Int)
-      )
+   TiO2sat = (out$coefficients[2,1] * M + out$coefficients[3,1] * TK + out$coefficients[1,1]),
+    TiO2satSD = TiO2sat * sqrt((out$coefficients[2,2]/ out$coefficients[2,1])^2 + (out$coefficients[3,2] / out$coefficients[3,1])^2),
+   lower = TiO2sat - TiO2satSD,
+   upper = TiO2sat + TiO2satSD
+  )
 ```
 
 ### preliminary M log-log plot
 
-```{r, echo=FALSE}
-p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), shape = Source, color = Source)) +
-  geom_point() +
+```{r}
+RegModel <- RegModel %>%
+  mutate(
+    logTiO2 = log10(TiO2),
+    logTiO2sat = log10(TiO2sat)
+  )
+p <- ggplot(RegModel, aes(x = logTiO2, y = logTiO2sat, ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
+  geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
   theme(legend.position = "left") +
   ylab(~paste("log"[10], "TiO"[2],"sat")) +
   xlab(~paste("log"[10], "TiO"[2],"meas"))
+p1 <- ggMarginal(p, type = "histogram")
+print(p1)
 
 ```
 
@@ -191,7 +188,7 @@ p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), shape = Source, c
 
 Need to delete the two experiments with the lowest TiO2, since they don't fall on the trend and are likely below the detection limit
 
-```{r, echo=FALSE, results='hide'}
+```{r}
 DelExpts <- c("ND-002-18", "ND-002-20")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ M + TK, data = RegModel)
@@ -205,7 +202,7 @@ Observations depicted as large circles may have a disproportionate influence on 
 
 ### Test of M model regression assumptions
 
-```{r, echo=FALSE}
+```{r}
 gvmodel <- gvlma(fit)
 summary(gvmodel)
 ```
@@ -214,18 +211,11 @@ All assumptions satisfied [@pena2006global]
 
 ### Calculate M model TiO2 concentrations and errors
 
-```{r, echo=FALSE}
-# Model output table provides standard errors; convert to standard deviation by multiplying by sqrt of n = # of samples
-n <- nrow(RegModel)
-Mcoef <- out$coefficients[2,1]
-Mcoefsd <- out$coefficients[2,2]*sqrt(n)
-Tcoef <- out$coefficients[3,1]
-Tcoefsd <- out$coefficients[3,2]*sqrt(n)
-Int <- out$coefficients[1,1]
+```{r}
 RegModel <- RegModel %>%
   mutate(
-   TiO2sat = (Mcoef * M + Tcoef * TK + Int),
-    TiO2satSD = sqrt(Mcoef^2*Mcoefsd^2 + Tcoef^2*Tcoefsd^2),
+   TiO2sat = (out$coefficients[2,1] * M + out$coefficients[3,1] * TK + out$coefficients[1,1]),
+    TiO2satSD = TiO2sat * sqrt((out$coefficients[2,2]/ out$coefficients[2,1])^2 + (out$coefficients[3,2] / out$coefficients[3,1])^2),
    lower = TiO2sat - TiO2satSD,
    upper = TiO2sat + TiO2satSD
   )
@@ -233,10 +223,13 @@ RegModel <- RegModel %>%
 
 ### Plot M model TiO2 saturation concentration versus measured TiO2
 
-```{r, echo=FALSE}
+```{r}
+fitparams <- c(out$coefficients[1,1], out$coefficients[2,1],  out$coefficients[3,1])
+fitparams <- round(fitparams, digits = 4)
 p <- ggplot(RegModel, aes(x = TiO2, y = TiO2sat, ymin = lower, ymax = upper, shape = Source, color = Source)) +
   geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
+  # labs(caption = str_c("TiO2sat = ",fitparams[2], "* M + ", fitparams[3], "* T(K) + ",fitparams[1])) +
   theme(legend.position = "left") +
   ylab(~paste("TiO"[2],"sat")) +
   xlab(~paste("TiO"[2],"meas"))
@@ -249,8 +242,8 @@ ggsave("AllExptsM_ModelFit.svg", width = 2000, height = 2*618, units = "px", plo
 
 ### final log-log plot of M model fit
 
-```{r, echo=FALSE}
-p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
+```{r}
+p <- ggplot(RegModel, aes(x = logTiO2, y = logTiO2sat, ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
   geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
   theme(legend.position = "left") +
@@ -262,116 +255,37 @@ print(p1)
 
 ### TiO2-M plot
 
-```{r, echo=FALSE}
-RegModel %>%
-ggplot(aes(x=M, y=TiO2, fill = TK)) +
-  geom_point(size = 4, shape = 22, color = "black") +
-   theme_bw() +
-  ylab(~paste("TiO"[2],"sat")) +
- scale_fill_gradientn(colours = c("darkred", "orange", "yellow", "white"))
+```{r}
+ggplot(RegModel, aes(x=M, y=TiO2, color=Source)) +
+  geom_point() +
+  theme_bw() +
+  ylab(~paste("TiO"[2],"sat"))
   
 ```
 
 ### TiO2-TK plot
 
-```{r, echo=FALSE}
-ggplot(RegModel, aes(x=TK, y=TiO2, color=M)) +
-  geom_point()
-```
-
-### TiO2 - A/CNK plot
-
 ```{r}
-ggplot(RegModel, aes(x=A_CNK, y=TiO2, color=TK)) +
+ggplot(RegModel, aes(x=TK, y=TiO2, color=Source)) +
   geom_point()
 ```
 
 ### Model output table
 
-```{r, echo=FALSE}
+```{r}
 TiO2AllExptsModelTable <- select(RegModel, Source, Expt, M, TK, TiO2, TiO2sat, TiO2satSD)
 write.csv(TiO2AllExptsModelTable, file = "TiO2AllExptsM_ModelTable.csv")
-DFGlassComps <- filter(RegModel, Source != "LEPR") %>%
-  select(Expt, SiO2:TiO2, M, C, A_CNK, A_NK)
-write.csv(DFGlassComps, file = "DFGlassCompositions.csv")
-
 ```
 
 ### M model titanite saturation test
 
-Use M model equation to test whether LEPR expts without titanite or rutile are undersaturated.
+Use Model equation to test whether Expts in "NoTitanite" without rutile are undersaturated. All should have been saturated. 
 
-```{r, echo=FALSE}
-LEPR_Expts <- read_csv("LEPR_ExperimentsV2.csv")
-LEPRLiqs <- read_csv("LEPR_LiquidAnhyV4.csv")
-LEPR <- inner_join(LEPR_Expts, LEPRLiqs, by = "Index")
-LEPRnoTitRut <- filter(LEPR, !(grepl("tit|rut", Phases))) %>%
-  mutate(
-    FeOt = FeO + (2*71.85*Fe2O3)/159.69,
-    TK = T_C + 273.15,
-    Tot = SiO2 + TiO2 + Al2O3 + FeOt + MgO + CaO + Na2O + K2O) %>%
-  filter(Tot > 90)
-LEPRnoTitRut <- select(LEPRnoTitRut, Experiment.x, TK, SiO2, TiO2, Al2O3, FeOt, MgO, CaO, Na2O, K2O, Tot)   %>%
-  mutate(
-    SiO2 = 100*SiO2/Tot,
-    TiO2 = 100*TiO2/Tot,
-    Al2O3 = 100*Al2O3/Tot,
-    FeOt = 100*FeOt/Tot,
-    MgO = 100*MgO/Tot,
-    CaO = 100*CaO/Tot,
-    Na2O = 100*Na2O/Tot,
-    K2O = 100*K2O/Tot,
-    Tot = SiO2 + TiO2 + Al2O3 + FeOt + MgO + CaO + Na2O + K2O
-  )
-```
-
-#### Calculate concentrations of cations
-
-```{r, echo=FALSE}
-LEPRnoTitRutCations <- LEPRnoTitRut %>%
-  mutate(
-    Si = SiO2/60.0848,
-    Al = 2*Al2O3/101.961,
-    Na = 2*Na2O/61.979,
-    K = 2*K2O/94.194,
-    Ca = CaO/56.0794,
-    Fe = FeOt/71.8464,
-    Mg = MgO/40.3044,
-    Ti = TiO2/79.8988,
-    eCa = (CaO/56.0794 - Al2O3/101.961 + K2O/94.194 + Na2O/61.979),
-    CationSum = (Si + Al + Na + K + Ca + Fe + Mg + Ti)
-     )
-```
-
-#### Calculate cation fractions
-
-```{r, echo=FALSE}
-
-LEPRnoTitRutCationFractions <- LEPRnoTitRutCations
-f <- match("Si", names(LEPRnoTitRutCationFractions))
-l <- match("Ti", names(LEPRnoTitRutCationFractions))
-for (i in f:l) {
-  LEPRnoTitRutCationFractions[(i)] = LEPRnoTitRutCationFractions[(i)]/LEPRnoTitRutCationFractions$CationSum
-}
-
-```
-
-#### Calculate melt composition parameters
-
-```{r, echo=FALSE}
-LEPRnoTitRutCationFractions <- LEPRnoTitRutCationFractions %>%
-  mutate(
-    M = (Na + K + 2*Ca)/(Si*Al),
-    C = (10*eCa)/(Si*Al),
-    )
-```
-
-#### Compare model and observations
-
-```{r, echo=FALSE}
-NoTitaniteModelM <- select(LEPRnoTitRutCationFractions, Experiment.x, TiO2, TK, M)
-NoTitaniteModelM$TiO2sat <- predict(fit, NoTitaniteModelM)
-CompareTiO2 <- select(NoTitaniteModelM, Experiment.x,  TiO2, TiO2sat)
+```{r}
+NoTitaniteModel <- filter(CationFractionsNoTitanite, Rutile == "N")
+NoTitaniteModel <- select(NoTitaniteModel, Expt, Source, TiO2, TK, M)
+NoTitaniteModel$TiO2sat <- predict(fit, NoTitaniteModel)
+CompareTiO2 <- select(NoTitaniteModel, Expt, TiO2, TiO2sat)
 CompareTiO2 <- CompareTiO2 %>%
   mutate(
     Model_Correct = if_else(TiO2sat > TiO2, "true", "false")
@@ -381,38 +295,26 @@ CompareTiO2 %>%
   count(Model_Correct)
 ```
 
--   M model correctly predicts undersaturation in 95% of experiments.
-
 ### Preliminary C model fit
 
-Formula for calculating melt composition parameter C:
-
-$$C = \frac{10*eCa}{Si * Al}$$ 
-
-where symbols are cation fractions, and excess calcium is defined as
-
-$$ eCa = \frac{(CaO - Al_{2}O_{3} + Na_{2}O + K_{2}O)}{Σ cations}$$
-
-with oxide concentrations in moles and the denominator the sum of the cations in moles.
-
-```{r, echo=FALSE}
+```{r}
 RegModel <- CationFractionsTitanite
 fit <- lm(TiO2 ~ C + InvTK + TK, data = RegModel)
 summary(fit)
 
 ```
 
--   TK fits better than InvTK, so drop InvTK
+- TK fits better than InvTK, so drop InvTK
 
 ### Refined C model fit
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 fit <- lm(TiO2 ~ C + TK, data = RegModel)
 summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("SpDis_1", "SpDis_3", "SpG_28")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ C + TK, data = RegModel)
@@ -420,7 +322,7 @@ summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("ASI200", "SpDis_2", "DAC")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ C + TK, data = RegModel)
@@ -428,7 +330,7 @@ summary(fit)
 plot(fit)
 ```
 
-```{r, echo=FALSE, results='hide', fig.show='hide'}
+```{r}
 DelExpts <- c("RHY", "SH2Na", "SH2K")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ C + TK, data = RegModel)
@@ -437,22 +339,26 @@ out
 plot(fit)
 ```
 
-```{r, echo=FALSE}
-n <- nrow(RegModel)
-Ccoef <- out$coefficients[2,1]
-Tcoef <- out$coefficients[3,1]
-Int <- out$coefficients[1,1]
+```{r}
 RegModel <- RegModel %>%
   mutate(
-   TiO2sat = (Ccoef * C + Tcoef * TK + Int)
-      )
+   TiO2sat = (out$coefficients[2,1] * C + out$coefficients[3,1] * TK + out$coefficients[1,1]),
+    TiO2satSD = TiO2sat * sqrt((out$coefficients[2,2]/ out$coefficients[2,1])^2 + (out$coefficients[3,2] / out$coefficients[3,1])^2),
+   lower = TiO2sat - TiO2satSD,
+   upper = TiO2sat + TiO2satSD
+  )
 ```
 
 ### preliminary C log-log plot
 
-```{r, echo=FALSE}
-p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), shape = Source, color = Source)) +
-  geom_point() +
+```{r}
+RegModel <- RegModel %>%
+  mutate(
+    logTiO2 = log10(TiO2),
+    logTiO2sat = log10(TiO2sat)
+  )
+p <- ggplot(RegModel, aes(x = logTiO2, y = logTiO2sat, ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
+  geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
   theme(legend.position = "left") +
   ylab(~paste("log"[10], "TiO"[2],"sat")) +
@@ -466,7 +372,7 @@ print(p1)
 
 Need to delete the two experiments with the lowest measured TiO2, since they don't fall on the trend and are likely below the detection limit
 
-```{r, echo=FALSE}
+```{r}
 DelExpts <- c("ND-002-18", "ND-002-20")
 RegModel <- filter(RegModel, !(Expt %in%  DelExpts))
 fit <- lm(TiO2 ~ C + TK, data = RegModel)
@@ -480,7 +386,7 @@ Observations depicted as large circles may have a disproportionate influence on 
 
 ### Test of C model regression assumptions
 
-```{r, echo=FALSE}
+```{r}
 gvmodel <- gvlma(fit)
 summary(gvmodel)
 ```
@@ -489,16 +395,11 @@ All assumptions satisfied [@pena2006global]
 
 ### Calculate C model TiO2 concentrations and errors
 
-```{r, echo=FALSE}
-Ccoef <- out$coefficients[2,1]
-Ccoefsd <- out$coefficients[2,2]*sqrt(n)
-Tcoef <- out$coefficients[3,1]
-Tcoefsd <- out$coefficients[3,2]*sqrt(n)
-Int <- out$coefficients[1,1]
+```{r}
 RegModel <- RegModel %>%
   mutate(
-   TiO2sat = (Ccoef * C + Tcoef * TK + Int),
-    TiO2satSD = sqrt(Ccoef^2*Ccoefsd^2 + Tcoef^2*Tcoefsd^2),
+   TiO2sat = (out$coefficients[2,1] * C + out$coefficients[3,1] * TK + out$coefficients[1,1]),
+    TiO2satSD = TiO2sat * sqrt((out$coefficients[2,2]/ out$coefficients[2,1])^2 + (out$coefficients[3,2] / out$coefficients[3,1])^2),
    lower = TiO2sat - TiO2satSD,
    upper = TiO2sat + TiO2satSD
   )
@@ -506,7 +407,9 @@ RegModel <- RegModel %>%
 
 ### Plot C model TiO2 saturation concentration versus measured TiO2
 
-```{r, echo=FALSE}
+```{r}
+fitparams <- c(out$coefficients[1,1], out$coefficients[2,1],  out$coefficients[3,1])
+fitparams <- round(fitparams, digits = 4)
 p <- ggplot(RegModel, aes(x = TiO2, y = TiO2sat, ymin = lower, ymax = upper, shape = Source, color = Source)) +
   geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
@@ -522,8 +425,8 @@ ggsave("AllExptsM_ModelFit.svg", width = 2000, height = 2*618, units = "px", plo
 
 ### final log-log plot of C model fit
 
-```{r, echo=FALSE}
-p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
+```{r}
+p <- ggplot(RegModel, aes(x = logTiO2, y = logTiO2sat, ymin = log10(lower), ymax = log10(upper), shape = Source, color = Source)) +
   geom_pointrange() +
   geom_abline(slope = 1, intercept = 0) +
   theme(legend.position = "left") +
@@ -535,7 +438,7 @@ print(p1)
 
 ### TiO2-C plot
 
-```{r, echo=FALSE}
+```{r}
 ggplot(RegModel, aes(x=C, y=TiO2, color=Source)) +
   geom_point() +
   theme_bw() +
@@ -545,35 +448,31 @@ ggplot(RegModel, aes(x=C, y=TiO2, color=Source)) +
 
 ### C Model output table
 
-```{r, echo=FALSE}
+```{r}
 TiO2AllExptsModelTable <- select(RegModel, Source, Expt, M, TK, TiO2, TiO2sat, TiO2satSD)
 write.csv(TiO2AllExptsModelTable, file = "TiO2AllExptsC_ModelTable.csv")
 ```
 
 ### C model titanite saturation test
 
-Use C Model equation to test whether Expts in "NoTitanite" without rutile are undersaturated. All should have been saturated.
+Use Model equation to test whether Expts in "NoTitanite" without rutile are undersaturated. All should have been saturated. 
 
-#### Compare model and observations
-
-```{r, echo=FALSE}
-NoTitaniteModelC <- select(LEPRnoTitRutCationFractions, Experiment.x, TiO2, TK, C)
-NoTitaniteModelC$TiO2sat <- predict(fit, NoTitaniteModelC)
-CompareTiO2 <- select(NoTitaniteModelC, Experiment.x,  TiO2, TiO2sat)
+```{r}
+NoTitaniteModel <- filter(CationFractionsNoTitanite, Rutile == "N")
+NoTitaniteModel <- select(NoTitaniteModel, Expt, Source, TiO2, TK, C)
+NoTitaniteModel$TiO2sat <- predict(fit, NoTitaniteModel)
+CompareTiO2 <- select(NoTitaniteModel, Expt, TiO2, TiO2sat)
 CompareTiO2 <- CompareTiO2 %>%
   mutate(
-Model_Correct = if_else(TiO2sat > TiO2, "true", "false")
+    Model_Correct = if_else(TiO2sat > TiO2, "true", "false")
   )
 CompareTiO2
 CompareTiO2 %>%
   count(Model_Correct)
 ```
-
-- C model correctly predicts undersaturation in 95% of experiments.
-
 ### Save output file and display session info
 
-```{r, echo=FALSE}
+```{r}
 save.image("TitaniteAllExptsM.RData")
 sessionInfo()
 ```
