--- a/TitaniteReferences.bib
+++ b/TitaniteReferences.bib
@@ -493,3 +493,13 @@ publisher = {Manning},
 title = {{R in Action}},
 year = {2015}
 }
+@article{Hirschmann2008,
+author = {Hirschmann, Marc M and Ghiorso, M S and Davis, Fred A and Gordon, S M and Mukherjee, S and Grove, T L and Krawczynski, M and Medard, E and Till, C B},
+issn = {1525-2027},
+journal = {Geochemistry, Geophysics, Geosystems},
+number = {3},
+publisher = {Wiley Online Library},
+title = {{Library of Experimental Phase Relations (LEPR): A database and Web portal for experimental magmatic phase equilibria data}},
+volume = {9},
+year = {2008}
+}
