--- a/AllExptsMV4.Rmd
+++ b/AllExptsMV4.Rmd
@@ -230,7 +230,7 @@ Int <- out$coefficients[1,1]
 RegModel <- RegModel %>%
   mutate(
    TiO2sat = (Mcoef * M + Tcoef * TK + Int),
-    TiO2satSD = sqrt(Mcoef^2*Mcoefsd^2 + Tcoef^2*Tcoefsd^2),
+    TiO2satSD = TiO2sat*sqrt(Mcoef^2*Mcoefsd^2 + Tcoef^2*Tcoefsd^2),
    lower = TiO2sat - TiO2satSD,
    upper = TiO2sat + TiO2satSD,
     )
@@ -248,7 +248,6 @@ p <- ggplot(data = RegModel, aes(x = TiO2, y = TiO2sat, ymin = lower, ymax = upp
 # add marginal distributions
 p1 <- ggMarginal(p, type = "histogram")
 print(p1)
-ggsave("AllExptsM_ModelFit.svg", width = 2000, height = 2*618, units = "px", plot = p1)
 
 ```
 
@@ -263,17 +262,20 @@ p <- ggplot(RegModel, aes(x = log10(TiO2), y = log10(TiO2sat), ymin = log10(lowe
   xlab(~paste("log"[10], "TiO"[2],"meas"))
 p1 <- ggMarginal(p, type = "histogram")
 print(p1)
+ggsave("AllExptsM_ModelFit.eps", width = 2000, height = 2*618, units = "px", plot = p1)
 ```
 
 ### TiO2-M plot
 
 ```{r}
-RegModel %>%
+p <- RegModel %>%
 ggplot(aes(x=M, y=TiO2, fill = TC)) +
   geom_point(size = 4, shape = 22, color = "black") +
    theme_bw() +
   ylab(~paste("TiO"[2],"sat")) +
  scale_fill_gradientn(colours = c("darkred", "orange", "yellow", "white"))
+print(p)
+ggsave("Fig7.eps", width = 2000, height = 2*618, units = "px", plot = p)
   
 ```
 
